--- a/05-BlockChain.ipynb
+++ b/05-BlockChain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO2wkFjSTGvgt+WzzN9ivmH",
+      "authorship_tag": "ABX9TyPlberJhyyVKnulfdIKdFhE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,9 +104,14 @@
         "      return\n",
         "\n",
         "  def search(self, data):\n",
+        "    # create a hash of the data\n",
+        "    sha = hashlib.sha256()\n",
+        "    sha.update(self.data.encode('utf-8'))\n",
+        "    data_hash = sha.hexdigest()\n",
+        "\n",
         "    # Run through the list to find the block object\n",
         "    for b in self.blocks:\n",
-        "      if b.data == data:\n",
+        "      if b.hash == data_hash:\n",
         "        return b\n",
         "    print('{} not found in BlockChain'.format(data))\n",
         "    return None\n",
@@ -238,16 +243,16 @@
       "metadata": {
         "id": "MJi1Ddn1susE",
         "colab_type": "code",
+        "outputId": "75ccda80-5eaf-423e-fe51-8f95dea7c15c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "75ccda80-5eaf-423e-fe51-8f95dea7c15c"
+        }
       },
       "source": [
         "bc.size()"
       ],
-      "execution_count": 194,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -268,17 +273,17 @@
       "metadata": {
         "id": "ulH8tHoQswLf",
         "colab_type": "code",
+        "outputId": "f308cbdd-1001-448f-f155-0ce394675522",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 106
-        },
-        "outputId": "f308cbdd-1001-448f-f155-0ce394675522"
+        }
       },
       "source": [
         "for b in bc.blocks:\n",
         "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
       ],
-      "execution_count": 195,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,17 +317,17 @@
       "metadata": {
         "id": "p5nBx_gPuHRs",
         "colab_type": "code",
+        "outputId": "b5c011d7-6d18-43ed-daea-f423ec2f4c70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 159
-        },
-        "outputId": "b5c011d7-6d18-43ed-daea-f423ec2f4c70"
+        }
       },
       "source": [
         "for b in bc.blocks:\n",
         "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
       ],
-      "execution_count": 197,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,17 +364,17 @@
       "metadata": {
         "id": "DNJsoB82uXCh",
         "colab_type": "code",
+        "outputId": "dc5dab0f-139f-4ba2-df04-686d8bd89848",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 211
-        },
-        "outputId": "dc5dab0f-139f-4ba2-df04-686d8bd89848"
+        }
       },
       "source": [
         "for b in bc.blocks:\n",
         "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
       ],
-      "execution_count": 199,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,17 +414,17 @@
       "metadata": {
         "id": "MUIPZJ9uuoEZ",
         "colab_type": "code",
+        "outputId": "ec48f298-1ba3-4659-a023-65f86cce4a3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 159
-        },
-        "outputId": "ec48f298-1ba3-4659-a023-65f86cce4a3d"
+        }
       },
       "source": [
         "for b in bc.blocks:\n",
         "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
       ],
-      "execution_count": 201,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,17 +446,17 @@
       "metadata": {
         "id": "woNFnfaDuqJW",
         "colab_type": "code",
+        "outputId": "1127b6a6-fbd5-42a3-efb3-306f943fee5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1127b6a6-fbd5-42a3-efb3-306f943fee5c"
+        }
       },
       "source": [
         "ret_block = bc.pop()\n",
         "ret_block.data"
       ],
-      "execution_count": 202,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,17 +477,17 @@
       "metadata": {
         "id": "PX0ldfJluvrV",
         "colab_type": "code",
+        "outputId": "dcdfc403-4a68-408f-f9fd-750fbc3751f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
-        },
-        "outputId": "dcdfc403-4a68-408f-f9fd-750fbc3751f1"
+        }
       },
       "source": [
         "for b in bc.blocks:\n",
         "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
       ],
-      "execution_count": 203,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
