--- a/05-BlockChain.ipynb
+++ b/05-BlockChain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPlberJhyyVKnulfdIKdFhE",
+      "authorship_tag": "ABX9TyMr7eWGCdhNuMDMoiBY/+Yl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,10 @@
       "source": [
         "class Block:\n",
         "    def __init__(self, timestamp, data, previous_hash):\n",
+        "      if data is None or data == '':\n",
+        "        print('Invalid Data for Block Chain')\n",
+        "        return\n",
+        "        \n",
         "      self.timestamp = timestamp\n",
         "      self.data = data\n",
         "      self.previous_hash = previous_hash\n",
@@ -106,7 +110,7 @@
         "  def search(self, data):\n",
         "    # create a hash of the data\n",
         "    sha = hashlib.sha256()\n",
-        "    sha.update(self.data.encode('utf-8'))\n",
+        "    sha.update(data.encode('utf-8'))\n",
         "    data_hash = sha.hexdigest()\n",
         "\n",
         "    # Run through the list to find the block object\n",
@@ -243,7 +247,7 @@
       "metadata": {
         "id": "MJi1Ddn1susE",
         "colab_type": "code",
-        "outputId": "75ccda80-5eaf-423e-fe51-8f95dea7c15c",
+        "outputId": "7e3320a9-845f-457d-a3f9-cb8b7f37f92e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -252,7 +256,7 @@
       "source": [
         "bc.size()"
       ],
-      "execution_count": 0,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -264,7 +268,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 194
+          "execution_count": 32
         }
       ]
     },
@@ -273,17 +277,17 @@
       "metadata": {
         "id": "ulH8tHoQswLf",
         "colab_type": "code",
-        "outputId": "f308cbdd-1001-448f-f155-0ce394675522",
+        "outputId": "275223c7-4fd9-4a1c-85ad-82625c3a5343",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 106
+          "height": 105
         }
       },
       "source": [
         "for b in bc.blocks:\n",
         "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
       ],
-      "execution_count": 0,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,17 +321,17 @@
       "metadata": {
         "id": "p5nBx_gPuHRs",
         "colab_type": "code",
-        "outputId": "b5c011d7-6d18-43ed-daea-f423ec2f4c70",
+        "outputId": "53976901-f4c4-4984-b808-1f301be13587",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 159
+          "height": 156
         }
       },
       "source": [
         "for b in bc.blocks:\n",
         "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
       ],
-      "execution_count": 0,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,17 +368,17 @@
       "metadata": {
         "id": "DNJsoB82uXCh",
         "colab_type": "code",
-        "outputId": "dc5dab0f-139f-4ba2-df04-686d8bd89848",
+        "outputId": "335dad60-9352-4ff1-b013-de0ae7e0ed2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 211
+          "height": 207
         }
       },
       "source": [
         "for b in bc.blocks:\n",
         "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
       ],
-      "execution_count": 0,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,17 +418,17 @@
       "metadata": {
         "id": "MUIPZJ9uuoEZ",
         "colab_type": "code",
-        "outputId": "ec48f298-1ba3-4659-a023-65f86cce4a3d",
+        "outputId": "250c8b47-7cc6-452e-fd83-d75497d9d3ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 159
+          "height": 156
         }
       },
       "source": [
         "for b in bc.blocks:\n",
         "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
       ],
-      "execution_count": 0,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +450,7 @@
       "metadata": {
         "id": "woNFnfaDuqJW",
         "colab_type": "code",
-        "outputId": "1127b6a6-fbd5-42a3-efb3-306f943fee5c",
+        "outputId": "d70f6b81-0c21-47ef-bef6-221f663d38d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -456,7 +460,7 @@
         "ret_block = bc.pop()\n",
         "ret_block.data"
       ],
-      "execution_count": 0,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -468,7 +472,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 202
+          "execution_count": 40
         }
       ]
     },
@@ -477,17 +481,17 @@
       "metadata": {
         "id": "PX0ldfJluvrV",
         "colab_type": "code",
-        "outputId": "dcdfc403-4a68-408f-f9fd-750fbc3751f1",
+        "outputId": "5abbf671-827f-4a3c-ed8a-288f00c06207",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 141
+          "height": 139
         }
       },
       "source": [
         "for b in bc.blocks:\n",
         "  print('Data: {}'.format(b.data), 'Curr Hash: {}'.format(b.hash), 'Prev hash: {}'.format(b.previous_hash))"
       ],
-      "execution_count": 0,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,7 +510,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sx7QnEuqu1AV",
+        "id": "-oGIKG0ki5jv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cc32cee1-0636-45e9-94e5-ae9d876391b9"
+      },
+      "source": [
+        "bc.append(None)"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Invalid Data for Block Chain\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BNYb55uYi7KU",
         "colab_type": "code",
         "colab": {}
       },
