--- a/05-BlockChain.ipynb
+++ b/05-BlockChain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMr7eWGCdhNuMDMoiBY/+Yl",
+      "authorship_tag": "ABX9TyNZ9O2lUP2oGpti6r3QTNAG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,6 +208,9 @@
         "    \n",
         "    # insert new block into the list\n",
         "    self.blocks.insert(pos-1, new_block)\n",
+        "\n",
+        "  def check_integrity(self):\n",
+        "    # Check the previous hash of each block is equal to the hash of the previous one\n",
         "\n",
         "  def size(self):\n",
         "    return len(self.blocks)"
